Start putting the SSR ingame, not working yet, mostly did some cleanups, need to clean the code some more and add comments about my blur method

--- a/DeferredKSP/Deferred.csproj
+++ b/DeferredKSP/Deferred.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="EditorLighting.cs" />
     <Compile Include="Deferred.cs" />
+    <Compile Include="ScreenSpaceReflections\ScreenSpaceReflections.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utils\KSCModelNormalsFixer.cs" />
     <Compile Include="Utils\DeferredReflectionProbeChecker.cs" />
